--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 
 header {
-    background-color: blue;
+    background-color: #2E6CC9;
     height: 50px;
     width: 100%;
     display: flex;
