--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -75,6 +75,21 @@ button {
     margin: 10px 0px 10px 20px;
 }
 
-#entry-list {
-    
+.title-content {
+    border-top: 1px solid #ccc;
+}
+
+ #dataTable {
+     width: 100%;
+     border-collapse: collapse;
+ }
+
+#dataTable th {
+    background-color: #f2f2f2;
+}
+
+#dataTable th, #dataTable td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
 }
