--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -79,10 +79,10 @@ button {
     border-top: 1px solid #ccc;
 }
 
- #dataTable {
-     width: 100%;
-     border-collapse: collapse;
- }
+#dataTable {
+    width: 100%;
+    border-collapse: collapse;
+}
 
 #dataTable th {
     background-color: #f2f2f2;
@@ -92,4 +92,14 @@ button {
     border: 1px solid #ccc;
     padding: 8px;
     text-align: left;
+}
+
+#delete-row {
+    width: 5%;
+}
+
+#dataTable button {
+    height: 40px;
+    width: 40px;
+    margin-left: 15px;
 }
