--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -75,8 +75,39 @@ button {
     margin: 10px 0px 10px 20px;
 }
 
-.title-content {
+#subscribers {
     border-top: 1px solid #ccc;
+    justify-content: space-between;
+}
+  
+#trashIcon:hover {
+    cursor: pointer;
+}
+
+.search-content {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    padding-left: 20px;
+    font-size: 12px;
+    border-bottom: 1px solid #ccc;
+}
+
+.search-content h2{
+    margin-right: 20px;
+}
+
+.search-content input[type="text"] {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 100%;
+}
+
+#searchItem {
+    height: 25px;
+    width: 300px;
 }
 
 #dataTable {
